tests/data/arff/invalid/sparse_invalid_feature_index.arff
% Title
% comments
@RELATION name

@ATTRIBUTE first    NUMERIC
@ATTRIBUTE second   numeric
@ATTRIBUTE third    Numeric
@ATTRIBUTE fourth   NUMERIC
@ATTRIBUTE class    {0,1}

@DATA
{3 1.0978832703949288,4 1}
{2 0.51687296029754564,3 0.54604461446026,4 1}
{1 0.60276937379453293,2 -0.13086851759108944,4 0}
{0 0.57650218263054642,5 1.01405596624706053,4 0}
{0 1.88494043717792,1 1.00518564317278263,2 0.298499933047586044,3 1.6464627048813514,4 0}